--- a/services/verified.html
+++ b/services/verified.html
@@ -48,7 +48,7 @@
       <i class="checkmark">✓</i>
     </div>
     <h1>Success</h1>
-    <p>Your email has been verified;<br /> Please <a href="http://localhost:3000/Login">login</a></p>
+    <p>Your email has been verified;<br /> Please <a href="https://prep-buddy-ui.vercel.app/Login">login</a></p>
   </div>
 </body>
 
